# microns-funconn-2025

./: .gitignore  LICENSE  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  requirements.txt  run-docker-container.sh  setup.py  setup_r_packages.R  show-registry.sh  test-docker-build.sh
.github/workflows/: docker-build-push.yml
docker/: Dockerfile
figures/: common_input.ipynb  common_input.py  like2like.ipynb  like2like.py
funconnect/: __init__.py  version.py
funconnect/compute/: common_inputs.py  like2like.py
funconnect/results/like2like/area/: bs_stats.csv  presyn_stats.feather
funconnect/stats/: __init__.py  glmm.py  like2like.py  quantity.py  variable.py
funconnect/utility/: R.py  compute.py  connectomics.py  file.py  pandas_util.py  performance.py  plot.py  proximities.py  stats.py
funconnect/visualization/: common_input.py  like2like.py
methods/: compute_proximities.ipynb
methods/sample_data/skeletons/: extract_skeletons.ipynb  skeleton_axon_222998.npz  skeleton_axon_327859.npz  skeleton_axon_560530.npz  skeleton_dend_292965.npz  skeleton_dend_587744.npz  skeleton_dend_587885.npz  skeleton_lookup.csv
results/common_inputs/: pre_mean_corr.feather  stats_results.csv
results/like2like/area/: presyn_mean.feather
results/like2like/area/delta_ori_cvt_monet_full-ld_density_control/: glmm_model_performance.csv  glmm_pairwise.csv
results/like2like/area/delta_ori_cvt_monet_full-synapse_density/: glmm_model_coef.csv  glmm_pairwise.csv
results/like2like/area/delta_ori_iv-ld_density_control/: glmm_meta_info.csv
results/like2like/area/delta_ori_iv-synapse_density/: glmm_emtrends.csv  glmm_model_coef.csv  glmm_model_performance.csv  glmm_pairwise.csv
results/like2like/area/in_silico_sig_corr_cvt-ld_density_control/: glmm_meta_info.csv  glmm_pairwise.csv
results/like2like/area/in_silico_sig_corr_cvt-synapse_density/: glmm_model_coef.csv  glmm_model_performance.csv  glmm_pairwise.csv
results/like2like/area/in_vivo_sig_corr-ld_density_control/: glmm_model_coef.csv  glmm_pairwise.csv
results/like2like/area/in_vivo_sig_corr-synapse_density/: glmm_meta_info.csv  glmm_model_coef.csv
results/like2like/area/readout_location_distance_cvt-ld_density_control/: glmm_emtrends.csv
results/like2like/area/readout_location_distance_cvt-synapse_density/: glmm_meta_info.csv  glmm_model_performance.csv
results/like2like/area/readout_similarity_cvt-synapse_density/: glmm_emtrends.csv  (+2 more)
(+116 files in other folders)
