[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "funconnect"
authors = [
    {name = "Zhuokun Ding", email = "zkding@outlook.com"},
]
description = "Functional connectomics reveals general wiring rule in mouse visual cortex"
requires-python = ">=3.8"
keywords = ["functional connectomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "scipy>=1.15.2",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "rpy2>=3.5.11",
    "tqdm>=4.67.1",
    "jupyterlab>=4.4.0",
    "ipywidgets>=8.1.6",
    "pyarrow>=19.0.1",  # For efficient data serialization with pandas
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/zhuokunding/microns-funconn-2025"
"Bug Tracker" = "https://github.com/zhuokunding/microns-funconn-2025/issues"
"Documentation" = "https://github.com/zhuokunding/microns-funconn-2025/blob/main/README.md"
"Paper" = "https://doi.org/10.1038/s41586-025-08840-3"

[tool.setuptools]
packages = ["funconnect"]

[tool.setuptools_scm]
write_to = "funconnect/version.py"

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Enable preview style formatting.
preview = true

